--- a/5Ejercicio-UbicacionSass/index.html
+++ b/5Ejercicio-UbicacionSass/index.html
@@ -10,12 +10,12 @@
     <div class="main-container"> 
         <div class="d-flex">
             <div class="item">
-                <h2>Sample Felcbox example</h2>
+                <h2>Sample Flexbox example</h2>
            </div> 
         </div>
             <div class="d-flex">
                 <div class="item">
-                    <h2>Hola</h2>
+                    <h2>First Article</h2>
                      <p>Lorem ipsum dolor sit amet, 
                          consectetur adipisicing elit. 
                          Possimus, sed placeat dignissimos perspiciatis 
@@ -24,7 +24,7 @@
             </div>
                 <div class="d-flex">
                     <div class="item">
-                        <h2>Hola</h2>
+                        <h2>Second Article</h2>
                          <p>Lorem ipsum dolor sit amet, 
                              consectetur adipisicing elit. 
                              Possimus, sed placeat dignissimos perspiciatis 
@@ -33,7 +33,7 @@
                 </div> 
                     <div class="d-flex">
                         <div class="item">
-                            <Hola</h2>
+                            <h2>Third Article</h2>
                              <p>Lorem ipsum dolor sit amet, 
                                  consectetur adipisicing elit. 
                                  Possimus, sed placeat dignissimos perspiciatis 
