--- a/ProyectoFinal/index.html
+++ b/ProyectoFinal/index.html
@@ -23,53 +23,86 @@
         </nav>
     </div>
 </div>
-<div class="float-left">
+<div>
+<div >
     <img class="img-title" src="./assets/TituloBuild.jpg" alt="TituloBuild">
   </div>
-
-  <div> 
+<div>
+  <div class="row" > 
     <img class="float-center" src="./assets/cohete pequeño.jpg" alt="TituloBuild">
   </div>
-
+</div>
+</div>
   <div>
     <H1 class="h1">YOUR TRUSTED DIGITAL MARKETING PIONEERS </H1>
-
-<div>
-    <P 
-    class="p-gray">We work with forward-thinking businesses and build creative solutions for their growth.
+    <p class="p-gray">
+      We work with forward-thinking businesses and build creative solutions for their growth.
     </P>
+
+<div class="row">
+  <button class="btn-uno" >ABOUT</button>
+  <button class="btn-dos" >OUR SERVICES</button>
 </div>
-<div >
-        <button class="btn-uno" >ABOUT</button>
-        <button class="btn-dos" >OUR SERVICES</button>
 </div>
-</div> 
+
 <div class="container-first">
 <div class="type-container">
-    <H1 class="h1" style="float: right;">HOW CAN WE HELP?</H1>
+  
+    <H1 class="h1-sec row-low" >HOW CAN WE HELP?</H1>
+</div>
+</div>
 </div>
 <div class="item2 d-flex">
       <div class="item2">
+        <img src="./assets/lapiz.jpg" alt="Hoja lapiz">
           <h2>BRANDING & GRAPHIC DESIGN</h2>
         <p>Looking for a memorable businesses identity? We can craft eye
             catching logos,corporate assets and social media images, and can even develop your brand story!.</p>
-      </div>
+      <button class="btn-tres">View more</button>
+          </div>
  
     <div class="item2">
+      <img src="./assets/mundo.jpg" alt="Mundo pagina">
         <h2>Website Design & Development</h2>
       <p>Need a professional website? Whether 
           it's on a CMS or completely custom, we can handle everything from content, design, and development!.</p>
-    </div>
+        <button class="btn-tres">View more</button>
+        </div>
     <div class="item2">
+      <img src="./assets/Lupa.jpg" alt="">
         <h2>Search Engine Optimisation</h2>
       <p>Not seeing your website in search results? We do website audits to find out why that is, and can apply tweaks that will help you appear more frequently..</p>
+    <button class="btn-tres">View more</button>
     </div>
     <div class="item2">
+      <img src="./assets/moneda.jpg" alt="">
         <h2>Social Media & Search Ads</h2>
       <p>Having trouble with Facebook, Instagram or Google PPC campaigns? We can set up targeting, write ad copy and optimise to extend your reach..</p>
+    <button class="btn-tres">View more</button>
     </div>
   </div>
+  <div>
+    <button class="btn-cuatro"> View all Services</button>
+  </div>
+
+  <div class="p-container">
+    <p class="p-consult">
+      They have been ver thoughtful and creatively crafted our web design from scratch. The team have been effectively communicating with us
+      throughout the web building process to ensure the website is the perfect one for us.
+    </p>
+    <button class="btn-cinco" >View Portfolio</button>
+  </div class="border-top">
+
+  <div class="border-top">
+    <h1 class="H1-CENTER" >READY TO LAUNCH TO NEW HEIGHTS?</h1>
+    <p class="p-subtitle">
+      We'd be happy to chat about your project ideas.
+    </p>
+    <button class="btn-seis">Let's Grab Coffe! </button>
+  </div>
+
 </div>
+
     
 </body>
 </html>
